--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .heroButton {
-        @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest
+        @apply px-3 md:px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest
         text-gray-500 transition-all hover:border-emerald-500/40 hover:text-emerald-300/40
     }
 
